# ConnectFour

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RealConnectFour.sln
RealConnectFour/: Board.hpp  Enums.hpp  Game.hpp  ISolver.hpp  Main.cpp  Player.hpp  RealConnectFour.vcxproj  RealConnectFour.vcxproj.filters  Solver.hpp  TranspositionTable.hpp  Utils.hpp
include/Board/: Board.hpp
include/Game/: Game.hpp
include/MoveCharacters/: MoveCharacters.hpp
include/Player/: Computer.hpp  ComputerFactory.hpp  Human.hpp  HumanFactory.hpp  Player.hpp  PlayerFactory.hpp
src/: main.cpp
src/Player/: Player.cpp
